css/style.css
/* ... */
.search-container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--brown);
  height: 75px;
}

.search-container > form {
  margin-bottom: 0;
  margin-left: 30px;
  border-radius: 20px;
  display: flex;
}

.search-container input {
  width: 420px;
  border-radius: 20px;
}

.search-icon {
  position: relative;
  top: 7px;
  left: -37px;
}

.search-icon img {
  width: 28px;
}

.form-control:focus {
  border-color: var(--brown-2);
}

.ui-autocomplete {
  position: absolute;
  z-index: 1000;
  cursor: default;
  padding: 0;
  margin-top: 2px;
  list-style: none;
  background-color: var(--brown);
  border: 1px solid var(--brown);
}

.ui-autocomplete > li {
  padding: 5px 20px;
}

.ui-autocomplete > li.ui-state-focus {
  background-color: var(--brown-3);
}

.ui-autocomplete > li.ui-state-focus > a {
  color: white;
  text-decoration: none;
}

.ui-helper-hidden-accessible {
  display: none;
}

.content-hidden {
  background-color: black;
  opacity: 0.529;
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 90;
}

.content-fixed {
  position: relative;
  top: 120px;
}

.header {
  margin-bottom: 0;
  border-bottom: 1px solid var(--brown-5);
  height: 120px;
  background-color: var(--brown-1);
  z-index: 98;
}

.header-fixed {
  position: fixed;
  width: 100%;
}

.header .header-icons {
  width: 182px;
}

.header .header-icons img {
  max-width: 19px;
  max-height: 19px;
  margin-right: 15px;
}

.header .header-icons a:hover {
  text-decoration: none;
}

.header .header-main {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  margin: 0 55px;
}

.header > .header-main > a > img {
  position: relative;
  left: -46px;
  width: 200px;
}

.header .header-main .menu-buttons {
  cursor: pointer;
  width: 87px;
  outline: none;
}

.header .menu-buttons > button > img {
  width: 23px;
}

.header .hamburger-btn {
  border: none;
  background: transparent;
  outline: none;
}

.header .header-main #menu-text {
  font-size: 16px;
  text-transform: uppercase;
  color: var(--brown-3);
  font-weight: bold;
  position: relative;
  top: 2px;
}

.header .navbar-links {
  display: none;
  position: absolute;
  right: 0;
  z-index: 100;
  width: 340px;
  text-transform: uppercase;
  background-color: white;
  font-size: 18px;
  font-weight: bold;
}

.header .navbar-links.show-menu {
  display: flex;
  flex-direction: column;
}

.header .navbar-links p {
  padding-left: 60px;
  height: 45px;
  display: flex;
  align-items: center;
}

.header .navbar-links .other-menu {
  margin-bottom: 10px;
}

.header .navbar-links .other-menu p {
  font-size: 14px;
  height: 30px;
}

.header .navbar-links a:hover {
  text-decoration: none;
}

.header .navbar-links p:hover {
  background-color: var(--brown);
}

.header .navbar-links .divider {
  height: 1px;
  margin: 9.5px 0;
  overflow: hidden;
  background-color: #e5e5e5;
}

.header .navbar-links .other-menu p.divider {
  height: 1px;
}

.dropdown-menu > li > a {
  color: var(--brown-3);
}

.dropdown-menu > li > a:hover {
  color: var(--brown-3);
}

.article-list {
  margin: 30px auto 20px auto; /* 20px eltolodas &#65279; miatt */
  max-width: 1300px;
  display: block;
  text-align: center;
}

.article-box {
  position: relative;
  display: inline-block;
  width: 270px;
  height: 655px;
  vertical-align: top;
  background-color: white;
  margin: 0 15px 30px 15px;
}

.article-text-section {
  text-align: left;
  height: 300px;
  padding: 25px 20px;
}

.article-text-section > h2 {
  margin: 10px 0;
  font-size: 18px;
  font-weight: bold;
}

.article-text-section > h4 {
  font-size: 14px;
  margin: 0;
}

.article-category {
  position: absolute;
  left: 20px;
  top: 600px;
  text-align: left;
}

.article-box .article-img {
  min-width: 100%;
  min-height: 100%;
}

.article-box .img-container {
  position: relative;
  width: 270px;
  height: 335px;
  overflow: hidden;
}

.article-box .category-label {
  position: absolute;
  top: 8px;
  left: 8px;
}

.article-list-pager {
  margin: 30px auto 50px auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

.article-list-pager .pager-link {
  margin: 0 5px;
  font-weight: 500;
}

.btn-pager {
  margin: 0 20px;
  padding: 5px 15px;
  background-color: transparent;
  border: 2px solid var(--brown-3);
  border-radius: 20px;
  text-transform: uppercase;
  font-weight: bold;
}

.btn-pager.disabled {
  cursor: not-allowed;
  text-decoration: none;
  opacity: 0.5;
}

.article {
  margin-top: 50px; /* 20px eltolodas &#65279; miatt */
  display: flex;
}

.article h1 {
  text-align: left;
  text-transform: unset;
  font-size: 36px;
  margin-top: 30px;
  margin-bottom: 10px;
}

.article h2 {
  margin: 0;
  font-size: 26px;
  font-weight: 500;
  line-height: 1.5;
}

.article h3 {
  font-size: 17px;
}

.article h4 {
  margin-top: 20px;
  margin-bottom: 0;
  font-size: 17px;
  color: var(--grey);
}

.article .meta-content {
  width: 200px;
  vertical-align: top;
  margin-left: 55px;
  margin-right: 10%;
  font-size: 16px;
  line-height: 1.3;
}

.article .article-content {
  max-width: 850px;
  vertical-align: top;
  margin-right: 5%;
  margin-bottom: 50px;
}

.article .article-content img {
  margin-right: 30px !important;
  margin-bottom: 20px !important;
  width: 270px;
}

.article .article-content .img-article-horizontal {
  max-width: 100%;
  width: unset;
  display: block;
  margin-left: auto!important;
  margin-right: auto!important;
}

.article .article-content .img-article {
  float: left;
}

.article .article-content .category-label {
  position: relative;
  top: 3px;
  margin-right: 5px;
}

.article .article-body {
  margin-top: 35px;
  text-align: justify !important;
  font-family: 'Droid Serif', "Source Sans Pro", Calibri, Candara, Arial, sans-serif!important;
  font-size: 14px;
}
/* ... */

